[package]
name = "data_shuffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
console = "0.15.8"
libc = "0.2.153"
rand = "0.8.5"
tempfile = "3.10.1"
winapi = { version = "0.3", features = ["libloaderapi", "minwinbase", "synchapi", "sysinfoapi", "winuser"] }
